Añadido: Diagrama de Componentes al README

--- a/README.org
+++ b/README.org
@@ -68,6 +68,8 @@
 
     @enduml
   #+END_SRC
+
+  [[file:img/linux-arquitectura.png][Arquitectura Linux]]
 * Display Servers
   - Reciben y atienden peticiones de los clientes
   - Recibe y atiende peticiones de visualización, entrada de texto y movimiento de mouse
